cluster-go/lightspeed-benchmark/test-06/templates/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: tictactoe
  namespace: ols-test-06
  labels:
    app: tictactoe
  finalizers:
    - kubernetes.io/this-finalizer-doesnt-exist
spec:
  containers:
  - name: tictactoe
    image: quay.io/rh_ee_cschmitz/tictactoe:latest
    imagePullPolicy: Always
    volumeMounts:
      - mountPath: /data
        name: tictactoe-data
    ports:
      - containerPort: 3000
        protocol: TCP
  volumes:
    - name: tictactoe-data
      persistentVolumeClaim:
        claimName: tictactoe-vol
