cluster-go/lightspeed-benchmark/test-06/templates/tictactoe-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: tictactoe
  namespace: ols-test-06
spec:
  selector:
    app: tictactoe
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
