cluster-go/lightspeed-benchmark/test-06/templates/tictactoe-route.yaml
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tictactoe
  namespace: ols-test-06
  labels: {}
spec:
  to:
    kind: Service
    name: tictactoe
  tls: {}
  port:
    targetPort: 3000
